--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
                 </div>
             </li>
            
-            <li class="portfolio-image"><img src="./images/project/img(10).jpg" alt="Poster New Orlean vs Golden Star" width="370" height="294">
+            <li class="portfolio-image"><img src="./images/project/img(10).jpg" alt="Poster New Orlean vs Golden Star" width="370" height="">
                <div class="portfolio-name">
                   <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                   <p class="portfolio-text">Дизайн</p>
