--- a/portfolio.html
+++ b/portfolio.html
@@ -121,12 +121,13 @@
     
     <footer class="footer">
       <div class="container">
-          <a class="nav-logo" href="./index.html"><span class="f-logo-web">Web</span><span class="f-logo-studio">Studio</span></a>
+        <div class="footer-address">
+          <a class="footer-logo" href="#"><span class="f-web">Web</span><span class="f-webstudio">Studio</span></a>
           <address class="address">
-           <ul class="address-list">
-              <li><a href="https://goo.gl/maps/V7rurpy2sbMKGbiy5" class="footer-map">г.Киев, пр-т Леси Украинки, 26</a></li>
-              <li><a href="mailto:info@example.com" class="footer-address">info@example.com</a></li>
-              <li><a href="tel:+380961111111" class="footer-address">+38 096 111 11 11</a></li>
+            <ul class="footer-address">
+              <li class="footer-item"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4271245,30.5353084,15.75z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" class="address-map">г. Киев, пр-т Леси Украинки, 26</a></li>
+              <li class="footer-item"><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+              <li class="footer-item"><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
            </ul>
           </address>
       </div>
