--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- Герой hero-->
     <section class="hero">
         <div class="container">
-            <h1 class="hero-title centered">Эффективные решения   </br> для вашего бизнеса</h1>
+            <h1 class="hero-title centered">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="hero-button">Заказать услугу</button>
            
         </div>
