--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
         <nav class="nav-box">
            <a class="nav-logo" href="./index.html"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
         <ul class="site-nav">
-             <li class="nav-item"><a href="" class="link current">Студия</a></li>
-             <li class="nav-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+             <li class="nav-item"><a href="./index.html" class="link">Студия</a></li>
+             <li class="nav-item"><a href="" class="link current">Портфолио</a></li>
              <li class="nav-item"><a href="" class="link">Контакты</a></li>
         </ul>
         </nav>
@@ -69,7 +69,7 @@
            
             <li class="portfolio-image">
               <a href="" class="portfolio-img">
-                <img src="./images/project/img (1).jpg" portfolio-photo alt="Poster New Orlean vs Golden Star" width="370"/>
+                <img src="./images/project/img (1).jpg" class="portfolio-photo" alt="Poster New Orlean vs Golden Star" width="370"/>
                <div class="portfolio-name">
                   <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                   <p class="portfolio-text">Дизайн</p>
